traefik/proxy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 3
  template:
    spec:
      priorityClassName: system-cluster-critical
      serviceAccountName: traefik
      containers:
        - name: traefik
          image: traefik:v3.6
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
            - name: internal
              containerPort: 8080
          securityContext:
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              memory: 200Mi
          livenessProbe:
            httpGet:
              path: /ping
              port: 8080
          readinessProbe:
            httpGet:
              path: /ping
              port: 8080
          volumeMounts:
            - name: config
              mountPath: /etc/traefik
      volumes:
        - name: config
          configMap:
            name: traefik-config
