traefik/proxy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-entrypoints
  annotations:
    metallb.io/loadBalancerIPs: 10.1.1.3
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
