traefik/proxy/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: traefik
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
  ingress:
    # Allow all entrypoints from anywhere
    - ports:
        - port: 80
        - port: 443
        - port: 8080
